desktop/src-tauri/error.txt
   Compiling my_openclaw v0.2.2 (D:\MVP\openclaw-secure-installer\desktop\src-tauri)
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\D:\MVP\openclaw-secure-installer\desktop\src-tauri\target\debug\incremental\my_openclaw-1se2cvvvnbpkf\s-hgeizik53n-1th2k5u-working`

warning: unused import: `std::io::ErrorKind`
 --> src\docker_check.rs:2:5
  |
2 | use std::io::ErrorKind;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::process::Command`
 --> src\docker_check.rs:4:5
  |
4 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Mutex` and `OnceLock`
 --> src\gateway.rs:3:17
  |
3 | use std::sync::{Mutex, OnceLock};
  |                 ^^^^^  ^^^^^^^^

warning: unused import: `PathBuf`
 --> src\patch.rs:2:23
  |
2 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

error[E0599]: no method named `path_resolver` found for reference `&AppHandle` in the current scope
   --> src\chat.rs:319:24
    |
319 |     let mut path = app.path_resolver()
    |                        ^^^^^^^^^^^^^ method not found in `&AppHandle`

warning: unused variable: `run`
   --> src\runs.rs:307:24
    |
307 |              if let Ok(run) = get_run(app.clone(), run_id.to_string()).await {
    |                        ^^^ help: if this is intentional, prefix it with an underscore: `_run`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `my_openclaw` (bin "my_openclaw") generated 6 warnings
error: could not compile `my_openclaw` (bin "my_openclaw") due to 1 previous error; 6 warnings emitted
